--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
         </div>
       </div>
       <div class="links-section">
-        <a href="https://github.com/MMRAG-FRI/mm-rag" class="link-button github"><span>📄</span> GitHub</a>
+        <a href="https://github.com/ast-fri/BRIT" class="link-button github"><span>📄</span> GitHub</a>
         <a href="https://huggingface.co/datasets/Fujitsu/MM-RAG" class="link-button huggingface"><span>🤗</span> Hugging Face</a>
         <a href="https://arxiv.org/abs/2505.18450" class="link-button arxiv"><span>📚</span> Paper </a>
       </div>
